On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	modified:   website/package.json

--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "start-flask": "cd ../api && .\\venv\\Scripts\\activate && flask run",
-    "start-dev": "concurrently \"npm run dev\" \"npm run start-flask\""
+    "start-dev": "concurrently \"npm run dev\" \"npm run start-flask\"",
+    "start-build": "concurrently \"npm run build\" \"npm run start-flask\""
   },
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
