On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	modified:   api/__pycache__/app.cpython-312.pyc
	modified:   api/app.py
	new file:   backend/.gitignore
	new file:   backend/config/dbConn.js
	new file:   backend/controllers/authController.js
	new file:   backend/controllers/logoutController.js
	new file:   backend/controllers/profileController.js
	new file:   backend/controllers/ratingController.js
	new file:   backend/controllers/refreshTokenController.js
	new file:   backend/controllers/registerController.js
	new file:   backend/logs/reqLog.txt
	new file:   backend/middleware/logEvents.js
	new file:   backend/middleware/verifyJWT.js
	new file:   backend/model/User.js
	new file:   backend/model/UserProfile.js
	new file:   backend/model/rating.js
	new file:   backend/package-lock.json
	new file:   backend/package.json
	new file:   backend/routes/auth.js
	new file:   backend/routes/logout.js
	new file:   backend/routes/profile.js
	new file:   backend/routes/rating.js
	new file:   backend/routes/refresh.js
	new file:   backend/routes/register.js
	new file:   backend/server.js
	modified:   website/package-lock.json
	modified:   website/package.json
	modified:   website/src/app/anime/[id]/page.jsx
	modified:   website/src/app/context/AuthContext.js
	modified:   website/src/app/layout.js
	new file:   website/src/app/login/layout.js
	new file:   website/src/app/login/page.jsx
	modified:   website/src/app/page.js
	modified:   website/src/app/profile/page.js
	new file:   website/src/app/register/page.jsx
	modified:   website/src/components/Carousel.js
	modified:   website/src/components/CarouselCard.js
	new file:   website/src/components/Modal.js
	modified:   website/src/components/Navbar.jsx
	new file:   website/src/components/RegisterForm.js
	new file:   website/src/components/UseReview.js
	new file:   website/src/components/UserProfile.js
	new file:   website/src/components/UserProfileForm.js
	new file:   website/src/components/l

--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "start-flask": "cd ../api && .\\venv\\Scripts\\activate && flask run",
-    "start-dev": "concurrently \"npm run dev\" \"npm run start-flask\"",
+    "start-node": "cd ../backend  && npm run start-dev",
+    "start-dev": "concurrently \"npm run dev\" \"npm run start-node\" \"npm run start-flask\"",
     "start-build": "concurrently \"npm run build\" \"npm run start-flask\""
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
     "firebase": "^10.12.2",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
